[package]
name = "ramhorns"
version = "0.0.0"
authors = ["Maciej Hirsz <maciej.hirsz@pm.me>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "WIP Handlebarsy templating engine"
repository = "https://github.com/maciejhirsz/ramhorns"
documentation = "https://docs.rs/ramhorns"

[dependencies]
