[package]
name = "ramhorns-derive"
version = "0.5.0"
authors = ["Maciej Hirsz <maciej.hirsz@pm.me>"]
license = "GPL-3.0"
edition = "2018"
description = "Experimental Mustache-like templating engine."
repository = "https://github.com/maciejhirsz/ramhorns"
documentation = "https://docs.rs/ramhorns"
readme = "../README.md"

[lib]
name = "ramhorns_derive"
proc-macro = true

[dependencies]
fnv = "1.0"
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
