[package]
name = "ramhorns-derive"
version = "0.14.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
license = "GPL-3.0"
edition = "2018"
description = "Experimental Mustache-like templating engine."
repository = "https://github.com/maciejhirsz/ramhorns"
documentation = "https://docs.rs/ramhorns"
readme = "../README.md"

[lib]
name = "ramhorns_derive"
proc-macro = true

[dependencies]
bae = "0.1.7"
fnv = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"
