[package]
name = "ramhorns"
version = "0.13.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
license = "GPL-3.0"
edition = "2018"
description = "Experimental Mustache-like templating engine."
repository = "https://github.com/maciejhirsz/ramhorns"
documentation = "https://docs.rs/ramhorns"
readme = "../README.md"
keywords = ["html", "template", "mustache"]
categories = ["template-engine"]

[dependencies]
arrayvec = "0.7.1"
beef = "0.5.1"
fnv = "1.0"
pulldown-cmark = "0.8"
ramhorns-derive = { version = "0.13.0", optional = true }
ahash = "0.7.4"
logos = "0.12.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
default = ["export_derive"]

# Re-exports the `Context` derive macro, so that end user only needs to
# import this crate and `use ramhorns::Context` to get both the trait and
# derive proc macro.
export_derive = ["ramhorns-derive"]
