[package]
name = "ramhorns"
version = "1.0.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
license = "GPL-3.0"
edition = "2018"
description = "Experimental Mustache-like templating engine."
repository = "https://github.com/maciejhirsz/ramhorns"
documentation = "https://docs.rs/ramhorns"
readme = "../README.md"
keywords = ["html", "template", "mustache"]
categories = ["template-engine"]

[dependencies]
arrayvec = "0.7.4"
beef = "0.5.2"
fnv = "1.0"
pulldown-cmark = { version = "0.10", default_features = false, features = ["html"], optional = true }
ramhorns-derive = { version = "1.0.0", path = "../ramhorns-derive", optional = true }
logos = "0.14.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
default = ["export_derive", "pulldown-cmark"]

# Re-exports the `Context` derive macro, so that end user only needs to
# import this crate and `use ramhorns::Context` to get both the trait and
# derive proc macro.
export_derive = ["ramhorns-derive"]
