[package]
name = "tests"
version = "0.0.0"
authors = ["maciejhirsz <maciej.hirsz@pm.me>"]
license = "GPL-3.0"
repository = "https://github.com/maciejhirsz/ramhorns"
edition = "2018"

[dev-dependencies]
ramhorns = { path = "../ramhorns" }
askama = "0.9"
handlebars = "3.0.1"
serde = "1.0"
serde_derive = "1.0"
mustache = "0.9"
tera = "1.1.0"