[package]
name = "tests"
version = "0.0.0"
authors = ["maciejhirsz <hello@maciej.codes>"]
license = "GPL-3.0"
repository = "https://github.com/maciejhirsz/ramhorns"
edition = "2018"

[dev-dependencies]
ramhorns = { path = "../ramhorns" }
askama = "0.9"
handlebars = "3.1.0-beta.2"
serde = "1.0"
serde_derive = "1.0"
mustache = "0.9"
tera = "1.2.0"
ahash = "0.7"

[features]
indexes = [ "ramhorns/indexes" ]
